hphp/hack/test/typecheck/reactive/foreach_in_rx3.php
<?hh // strict

<<__Rx>>
function f1<T as Traversable<int>>(T $a): void {
  // ERROR: non rx-traversable
  foreach ($a as $c) {
  }
}
